syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.salesfoce.apollo.messaging.proto";
option java_outer_classname = "MessagingProto";
option objc_class_prefix = "Mp";
import "google/protobuf/empty.proto";
import "util.proto";

package messaging; 

message MessageBff {
    utils.Digeste context = 1; 
    int32 ring = 3;
    utils.Biff digests = 4;
}

message ByteMessage {
    bytes contents = 1;
}

service RBC {
    rpc gossip (MessageBff) returns (Reconcile) {}
    rpc update (ReconcileContext) returns (google.protobuf.Empty) {}
}

message Reconcile { 
    repeated  AgedMessage updates = 1;
    utils.Biff digests = 2;
}

message ReconcileContext {
    utils.Digeste context = 1;
    int32 ring = 2;
    repeated  AgedMessage updates = 3;
}

message AgedMessage {
    int32 age = 1;
    int32 nonce = 2;
    bytes content = 3;
    utils.Digeste source = 4;
    utils.Sig signature = 5;
}
